--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - Implement pragmas
 - Optimize static strings
 - Improve interface to compile options (formatting, etc.)
+- Document dust.renderSource & dust.compileFn
